--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "shadcn-ui": "^0.9.4",
-    "swr": "^2.3.2"
+    "swr": "^2.3.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
@@ -40,6 +41,7 @@
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "babel-jest": "^29.7.0",
